<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="2dp"
        android:padding="8dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textViewOrderNr"
                    style="@style/history_session_view_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonViewMapOfOldSession"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewSessionName"
                    style="@style/history_session_view_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="TextView"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewOrderNr"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonViewMapOfOldSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_activity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHistoryDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/history_session_view_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHistoryTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/history_session_view_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewHistoryPace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/history_session_view_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pace" />
                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <Button
                    android:id="@+id/buttonDeleteSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_activity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonSaveGpx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_gpx"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_session"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonDeleteSession"
                    app:layout_constraintStart_toEndOf="@+id/buttonSaveGpx"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>